# ChangeLog for sys-cluster/globus-build
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  globus-build-4.2.1.ebuild, metadata.xml:
  Even more cleanup, useflags dont seem to be used for globus-build

  19 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  globus-build-4.2.1.ebuild:
  Drop java eclasses, drop most unneeded dependencies, use cp instead of mv

  19 Aug 2009; Michał Górny (sedzimir) <gentoo@mgorny.alt.pl>
  globus-build-4.2.1.ebuild:
  Remove postrm, it's broken currently, it seems more related to
  sys-cluster/globus itself and it's already handled there.

  18 Aug 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
  Fix metadata.xml

  15 Aug 2009; John (EBo) David <ebo@users.sourceforge.net>
  +files/21globus-build, +globus-build-4.2.1.ebuild, +metadata.xml:
  New Ebuild for bug 51149 thanks to Tommy[D], sedzimir and the people over at
  sunrise
